# gsl_cpp_wrapper

./: .gitignore  CMakeLists.txt  LICENSE
include/gsl_wrapper/: all.h  matrix.h  vector.h
include/gsl_wrapper/bits/: matrix-view.h
include/gsl_wrapper/utils/: fcmp.h
src/: CMakeLists.txt
test/: CMakeLists.txt  generic.cpp  matrix.cpp  vector.cpp
